Fix minor layout issues

--- a/css/cropper/cropper-ui.css
+++ b/css/cropper/cropper-ui.css
@@ -9,6 +9,7 @@
 
 .cropper-actions .btn-group {
 	padding-right: 0.5em;
+	margin-bottom: 0.5em;
 }
 
 .cropper-nav {
